--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,28 @@
-.App {
-	text-align: center;
+.app {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 50px;
 }
-​ .App-logo {
-	animation: App-logo-spin infinite 20s linear;
-	height: 80px;
-}
-​ .App-header {
-	background-color: #222;
-	height: 150px;
-	padding: 20px;
-	color: white;
-}
-​ .App-title {
-	font-size: 1.5em;
-}
-​ .App-intro {
-	font-size: large;
-}
-/* ​ @keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
-} *
-/
 
+.counter {
+	margin: 10px;
 
+	display: flex;
+	/* padding: px; */
+}
+
+.counter-controls {
+	padding: 5px;
+}
+.button {
+	margin: 5px;
+	padding: 10px;
+}
+
+.counter b {
+	font-size: 30px;
+	margin-right: 10px;
+	margin-top: 10px;
+}
